Fix horizontal overflow issue in dialogs

--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -1,6 +1,8 @@
 @use "../abstracts/themes" as *;
 
 .form {
+  position: relative;
+
   &-btns {
     &-func {
       display: flex;
